--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.15.20",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +17,7 @@
     "mongoose": "^8.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-notifications": "^1.7.4",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "socket.io": "^4.7.5",
