--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "mongoose": "^8.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-notifications": "^1.7.4",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
